--- a/skillCenter.css
+++ b/skillCenter.css
@@ -142,7 +142,10 @@ footer{
     height: 0.78rem;
     background-color: #fefefe;
     color: #979797;
+    color: #979797;
     border-top: 1px solid #e3e3e3;
+    position: fixed;
+    bottom: 0;
 }
 footer li{
     width: 25%;
@@ -161,4 +164,9 @@ footer img{
 }
 footer li:hover,footer li:focus{
     color: #f0644d
+}
+ a{
+    text-decoration: none ;
+    color: #979797 ;
+    cursor: pointer;
 }
